# newFastReID

./: MANIFEST.in  MODEL_ZOO_COMPATIBILITY.md  README.md  README_FOR_DEVELOPERS.md  generate_config.py  pyproject.toml  test_model_compatibility.py
fastreid/: __init__.py
fastreid.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
fastreid/data/: build.py
fastreid/evaluation/: testing.py
fastreid/evaluation/rank_cylib/: __init__.py  rank_cy.c  roc_cy.c  roc_cy.cp311-win_amd64.pyd  setup.py
fastreid/tools/: __init__.py  demo.py  test.py  train.py
fastreid/utils/: collect_env.py  file_io.py
tools/: generate_model_config.py
